--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,7 @@
 <body>
     <canvas id="renderCanvas"></canvas>
 
+    <span id="fpsLabel"></span>
     <pre id="output"></pre>
 
     <!-- Packages -->
