--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -16,9 +16,10 @@
 
     <!-- Packages -->
     <script src="packages/babylonJS/babylon.js"></script>
-    
+
     <!-- Scripts -->
     <script src="logger.js"></script>
+    <script src="keys.js"></script>
     <script src="connection.js"></script>
     <script src="world.js"></script>
 
