capturing player mouse movements, camera frozen

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -22,6 +22,7 @@
     <script src="keys.js"></script>
     <script src="connection.js"></script>
     <script src="world.js"></script>
+    <script src="mouse.js"></script>
 
     <!-- Application core -->
     <script src="app.js"></script>
