camera frozen to player positon

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -19,9 +19,11 @@
 
     <!-- Scripts -->
     <script src="logger.js"></script>
+    <script src="settings.js"></script>
     <script src="keys.js"></script>
     <script src="connection.js"></script>
     <script src="world.js"></script>
+    <script src="responseController.js"></script>
     <script src="mouse.js"></script>
 
     <!-- Application core -->
