showing ping, normalize camera y axis

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -12,6 +12,7 @@
     <canvas id="renderCanvas"></canvas>
 
     <span id="fpsLabel"></span>
+    <span id="pingLabel"></span>
     <pre id="output"></pre>
 
     <!-- Packages -->
