--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -13,6 +13,7 @@
 
     <span id="fpsLabel"></span>
     <span id="pingLabel"></span>
+    <span id="crosshair"></span>
     <pre id="output"></pre>
 
     <!-- Packages -->
