sending server config on client connected, config is now const

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -21,7 +21,7 @@
 
     <!-- Scripts -->
     <script src="logger.js"></script>
-    <script src="settings.js"></script>
+    <script src="config.js"></script>
     <script src="keys.js"></script>
     <script src="connection.js"></script>
     <script src="world.js"></script>
