added fullscreen option

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -15,6 +15,7 @@
     <span id="pingLabel"></span>
     <span id="crosshair"></span>
     <pre id="output"></pre>
+    <span id="fullscreenToggle">O</span>
 
     <!-- Packages -->
     <script src="packages/babylonJS/babylon.js"></script>
@@ -27,6 +28,7 @@
     <script src="world.js"></script>
     <script src="responseController.js"></script>
     <script src="mouse.js"></script>
+    <script src="fullscreen.js"></script>
 
     <!-- Application core -->
     <script src="app.js"></script>
