fullscreen icon added

--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -15,7 +15,7 @@
     <span id="pingLabel"></span>
     <span id="crosshair"></span>
     <pre id="output"></pre>
-    <span id="fullscreenToggle">O</span>
+    <span id="fullscreenToggle"><img src="style/enterFullscreen.png" /></span>
 
     <!-- Packages -->
     <script src="packages/babylonJS/babylon.js"></script>
