--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -9,28 +9,26 @@
     <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
-<canvas id="renderCanvas"></canvas>
 
-<span id="fpsLabel"></span>
-<span id="pingLabel"></span>
-<span id="crosshair"></span>
-<pre id="output"></pre>
-<span id="fullscreenToggle">O</span>
+    <span id="fpsLabel"></span>
+    <span id="pingLabel"></span>
+    <pre id="output"></pre>
+    <span id="fullscreenToggle">O</span>
 
-<!-- Packages -->
-<script src="packages/babylonJS/babylon.js"></script>
+    <!-- Packages -->
+    <script src="packages/p5js/p5.js"></script>
 
-<!-- Scripts -->
-<script src="js/logger.js"></script>
-<script src="js/config.js"></script>
-<script src="js/keys.js"></script>
-<script src="js/connection.js"></script>
-<script src="js/world.js"></script>
-<script src="js/responseController.js"></script>
-<script src="js/mouse.js"></script>
-<script src="js/fullscreen.js"></script>
+    <!-- Scripts -->
+    <script src="js/logger.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/keys.js"></script>
+    <script src="js/connection.js"></script>
+    <script src="js/world.js"></script>
+    <script src="js/responseController.js"></script>
+    <script src="js/mouse.js"></script>
+    <script src="js/fullscreen.js"></script>
 
-<!-- Application core -->
-<script src="js/app.js"></script>
+    <!-- Application core -->
+    <script src="js/app.js"></script>
 </body>
 </html>
