--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -13,6 +13,7 @@
     <span id="fpsLabel"></span>
     <span id="pingLabel"></span>
     <pre id="output"></pre>
+    <div id="crosshair"></div>
     <span id="fullscreenToggle">O</span>
 
     <!-- Packages -->
