--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -28,6 +28,7 @@
     <script src="js/responseController.js"></script>
     <script src="js/mouse.js"></script>
     <script src="js/fullscreen.js"></script>
+    <script src="js/texturesService.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
