--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -12,8 +12,6 @@
 
     <span id="fpsLabel"></span>
     <span id="pingLabel"></span>
-    <pre id="output"></pre>
-    <!-- <div id="crosshair"></div> -->
     <span id="fullscreenToggle">O</span>
 
     <!-- Packages -->
@@ -29,6 +27,7 @@
     <script src="js/mouse.js"></script>
     <script src="js/fullscreen.js"></script>
     <script src="js/texturesService.js"></script>
+    <script src="js/blackScreen.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
