--- a/GameClient/index.html
+++ b/GameClient/index.html
@@ -15,7 +15,7 @@
     <span id="fullscreenToggle">O</span>
 
     <!-- Packages -->
-    <script src="packages/p5js/p5.js"></script>
+    <script src="js/p5.js"></script>
 
     <!-- Scripts -->
     <script src="js/logger.js"></script>
