Move communication to SignalR (#11)
* IMPL

* POC implementation

* Remove redundant project

* Implement Connection and configuration exchange

* Corrected naming and added delay to startup

* Implement client state update

* clarify framework dependency

* Corect interval initialization

* Add comunication for server side update

* Add initial mapstate to connection initialization

* Correct game state update

* Refactor

* Remove state controller

* Remove dev log

* Refactor

* Refactor 2

* Renames

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -16,6 +16,7 @@
 
     <!-- Packages -->
     <script src="js/p5.js"></script>
+    <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
     <script src="js/logger.js"></script>
