--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -12,7 +12,9 @@
 
     <span id="fpsLabel"></span>
     <span id="pingLabel"></span>
-    <span id="fullscreenToggle">O</span>
+    <span id="fullscreenToggle">
+        <img src="#" alt="" />
+    </span>
 
     <!-- Packages -->
     <script src="js/p5.js"></script>
@@ -26,7 +28,7 @@
     <script src="js/world.js"></script>
     <script src="js/responseController.js"></script>
     <script src="js/mouse.js"></script>
-    <script src="js/fullscreen.js"></script>
+    <script src="js/Controllers/FullscreenController.js"></script>
     <script src="js/texturesService.js"></script>
     <script src="js/blackScreen.js"></script>
 
