Implement Name prompt

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shoterio</title>
-
+    <link href="packages/vex-js/css/vex-theme-top.min.css" rel="stylesheet" />
+    <link href="packages/vex-js/css/vex.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
@@ -15,7 +16,9 @@
     <span id="fullscreenToggle">O</span>
 
     <!-- Packages -->
-    <script src="js/p5.js"></script>
+    <script src="packages/jquery/jquery.js"></script>
+    <script src="packages/vex-js/js/vex.combined.min.js"></script>
+    <script src="packages/p5js/p5.js"></script>
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
