--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -18,7 +18,7 @@
     <!-- Packages -->
     <script src="packages/jquery/jquery.js"></script>
     <script src="packages/vex-js/js/vex.combined.min.js"></script>
-    <script src="packages/p5js/p5.js"></script>
+    <script src="packages/p5.js/p5.min.js"></script>
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
