--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -7,7 +7,8 @@
     <title>Shoterio</title>
     <link href="packages/vex-js/css/vex-theme-top.min.css" rel="stylesheet" />
     <link href="packages/vex-js/css/vex.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link rel="stylesheet" type="text/css" href="style/main.css">>
+    <link href="packages/pnotify/pnotify.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -17,6 +18,7 @@
 
     <!-- Packages -->
     <script src="packages/jquery/jquery.js"></script>
+    <script src="packages/pnotify/pnotify.js"></script>
     <script src="packages/vex-js/js/vex.combined.min.js"></script>
     <script src="packages/p5.js/p5.min.js"></script>
     <script src="js/signalr.js"></script>
