--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -24,7 +24,7 @@
     <!-- Scripts -->
     <script src="js/logger.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/keys.js"></script>
+    <script src="js/Controllers/KeyboardController.js"></script>
     <script src="js/connection.js"></script>
     <script src="js/world.js"></script>
     <script src="js/responseController.js"></script>
