Corrected styling issues

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="packages/vex-js/css/vex.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style/main.css">>
     <link href="packages/pnotify/pnotify.css" rel="stylesheet" />
+    <link href="packages/pnotify/pnotify.brighttheme.css" rel="stylesheet" />
 </head>
 <body>
 
