Refactor as gloryfied Mr Tommy suggested

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>Shoterio</title>
     <link href="packages/vex-js/css/vex-theme-top.min.css" rel="stylesheet" />
     <link href="packages/vex-js/css/vex.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="style/main.css">>
+    <link rel="stylesheet" type="text/css" href="style/main.css">
     <link href="packages/pnotify/pnotify.css" rel="stylesheet" />
     <link href="packages/pnotify/pnotify.brighttheme.css" rel="stylesheet" />
 </head>
@@ -27,6 +27,7 @@
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
+    <script src="js/Controllers/NotificationController.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/config.js"></script>
     <script src="js/Controllers/KeyboardController.js"></script>
