--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -8,6 +8,8 @@
     <link href="packages/vex-js/css/vex-theme-top.min.css" rel="stylesheet" />
     <link href="packages/vex-js/css/vex.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link href="packages/pnotify/pnotify.css" rel="stylesheet" />
+    <link href="packages/pnotify/pnotify.brighttheme.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -19,11 +21,13 @@
 
     <!-- Packages -->
     <script src="packages/jquery/jquery.js"></script>
+    <script src="packages/pnotify/pnotify.js"></script>
     <script src="packages/vex-js/js/vex.combined.min.js"></script>
     <script src="packages/p5.js/p5.min.js"></script>
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
+    <script src="js/Controllers/NotificationController.js"></script>
     <script src="js/logger.js"></script>
     <script src="js/config.js"></script>
     <script src="js/Controllers/KeyboardController.js"></script>
