--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -19,6 +19,9 @@
         <img src="#" alt="" />
     </span>
 
+    <!-- CDN -->
+    <script src='//cdn.jsdelivr.net/latency-monitor/0.2.1/EventLoopPrinterWebpacked.js'></script>
+
     <!-- Packages -->
     <script src="packages/jquery/jquery.js"></script>
     <script src="packages/pnotify/pnotify.js"></script>
@@ -36,6 +39,7 @@
     <script src="js/mouse.js"></script>
     <script src="js/Controllers/FullscreenController.js"></script>
     <script src="js/texturesService.js"></script>
+    <script src="js/Services/nameService.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
