--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-    <span id="fpsLabel"></span>
-    <span id="pingLabel"></span>
+    <span id="fpsLabel" class="measurementLabel">0.00 - FPS</span>
+    <span id="pingLabel" class="measurementLabel">0 - Ping</span>
     <span id="fullscreenToggle">
         <img src="#" alt="" />
     </span>
@@ -27,6 +27,7 @@
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
+    <script src="js/Controllers/MeasurementController.js"></script>
     <script src="js/Controllers/NotificationController.js"></script>
     <script src="js/config.js"></script>
     <script src="js/Controllers/KeyboardController.js"></script>
