Extract drawing controller

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -27,6 +27,7 @@
     <script src="js/signalr.js"></script>
 
     <!-- Scripts -->
+    <script src="js/Controllers/DrawingController.js"></script>
     <script src="js/Controllers/MeasurementController.js"></script>
     <script src="js/Controllers/NotificationController.js"></script>
     <script src="js/config.js"></script>
