Implemented drawing service (#42)
* Extract drawing controller

* Refactor textures service

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -26,17 +26,22 @@
     <script src="packages/p5.js/p5.min.js"></script>
     <script src="js/signalr.js"></script>
 
-    <!-- Scripts -->
+    <!-- Controllers -->
+    <script src="js/Controllers/DrawingController.js"></script>
     <script src="js/Controllers/MeasurementController.js"></script>
     <script src="js/Controllers/NotificationController.js"></script>
-    <script src="js/config.js"></script>
+    <script src="js/Controllers/MouseController.js"></script>
     <script src="js/Controllers/KeyboardController.js"></script>
+    <script src="js/Controllers/FullscreenController.js"></script>
+
+    <!-- Services -->
+    <script src="js/Services/texturesService.js"></script>
+    <script src="js/Services/nameService.js"></script>
+
+    <!-- Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/connection.js"></script>
     <script src="js/world.js"></script>
-    <script src="js/Controllers/MouseController.js"></script>
-    <script src="js/Controllers/FullscreenController.js"></script>
-    <script src="js/texturesService.js"></script>
-    <script src="js/Services/nameService.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
