--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -37,6 +37,7 @@
     <script src="js/Controllers/FullscreenController.js"></script>
     <script src="js/texturesService.js"></script>
     <script src="js/Services/nameService.js"></script>
+    <script src="js/Services/WeaponService.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
