Get signalR Client as package

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -24,7 +24,7 @@
     <script src="packages/pnotify/pnotify.js"></script>
     <script src="packages/vex-js/js/vex.combined.min.js"></script>
     <script src="packages/p5.js/p5.min.js"></script>
-    <script src="js/signalr.js"></script>
+    <script src="packages/@aspnet/signalr/dist/browser/signalr.min.js"></script>
 
     <!-- Controllers -->
     <script src="js/Controllers/DrawingController.js"></script>
