--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -15,6 +15,7 @@
 
     <span id="fpsLabel" class="measurementLabel">0.00 - FPS</span>
     <span id="pingLabel" class="measurementLabel">0 - Ping</span>
+    <span id="healthLabel" class="measurementLabel">100/100</span>
     <span id="fullscreenToggle">
         <img src="#" alt="" />
     </span>
