--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -42,7 +42,7 @@
     <!-- Scripts -->
     <script src="js/config.js"></script>
     <script src="js/connection.js"></script>
-    <script src="js/world.js"></script>
+    <script src="js/Controllers/WorldController.js"></script>
 
     <!-- Application core -->
     <script src="js/app.js"></script>
