--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -34,6 +34,12 @@
     <script src="js/Controllers/KeyboardController.js"></script>
     <script src="js/Controllers/FullscreenController.js"></script>
 
+    <!-- Physics -->
+    <script src="js/Physics/Vector2.js"></script>
+    <script src="js/MapObjects/MapCircle.js"></script>
+    <script src="js/MapObjects/MapRect.js"></script>
+    <script src="js/Physics/Player.js"></script>
+
     <!-- Services -->
     <script src="js/Services/texturesService.js"></script>
     <script src="js/Services/nameService.js"></script>
