Use bullet object

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -38,6 +38,7 @@
     <script src="js/Physics/Vector2.js"></script>
     <script src="js/MapObjects/MapCircle.js"></script>
     <script src="js/MapObjects/MapRect.js"></script>
+    <script src="js/Physics/Bullet.js"></script>
     <script src="js/Physics/Player.js"></script>
 
     <!-- Services -->
