Turn off select on fullscreen

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-    <span id="fpsLabel" class="measurementLabel">0.00 - FPS</span>
-    <span id="pingLabel" class="measurementLabel">0 - Ping</span>
-    <span id="fullscreenToggle">
+    <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
+    <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
+    <span id="fullscreenToggle no-select">
         <img src="#" alt="" />
     </span>
 
