Fix fullscreen tag

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -15,7 +15,7 @@
 
     <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
     <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
-    <span id="fullscreenToggle no-select">
+    <span id="fullscreenToggle" class="no-select">
         <img src="#" alt="" />
     </span>
 
