Load missing  modules

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -15,7 +15,7 @@
 
     <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
     <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
-<span id="healthLabel" class="measurementLabel no-select"></span>
+    <span id="healthLabel" class="measurementLabel no-select"></span>
     <span id="fullscreenToggle" class="no-select">
         <img src="#" alt="" />
     </span>
@@ -41,6 +41,9 @@
     <script src="js/MapObjects/MapRect.js"></script>
     <script src="js/Physics/Bullet.js"></script>
     <script src="js/Physics/Player.js"></script>
+    <script src="js/Physics/Intersection.js"></script>
+    <script src="js/Physics/Physic.js"></script>
+    <script src="js/Physics/PhysicsEngine.js"></script>
 
     <!-- Services -->
     <script src="js/Services/texturesService.js"></script>
