Corrected pdead player interaction

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style/main.css">
     <link href="packages/pnotify/pnotify.css" rel="stylesheet" />
     <link href="packages/pnotify/pnotify.brighttheme.css" rel="stylesheet" />
+    <script src="http://use.edgefonts.net/butcherman.js"></script>
 </head>
 <body>
 
@@ -21,8 +22,11 @@
 </span>
 
 <div id="killScreen" class="hidden">
-    You died idiot!
-    <span id="resurectionTime"></span>
+    <div class="center">
+        <p class="killText">You  died!</p>
+        <p>Yoi'll be revived in </p>
+        <p id="resurectionTime"></p>
+    </div>
 </div>
 
     <!-- Packages -->
