Change Your name

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -24,7 +24,7 @@
 <div id="killScreen" class="hidden">
     <div class="center">
         <p class="killText">You  died!</p>
-        <p>Yoi'll be revived in </p>
+        <p>You'll be revived in </p>
         <p id="resurectionTime"></p>
     </div>
 </div>
