No select for kill screen

--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -22,7 +22,7 @@
 </span>
 
 <div id="killScreen" class="hidden">
-    <div class="center">
+    <div class="center no-select">
         <p class="killText">You  died!</p>
         <p>You'll be revived in </p>
         <p id="resurectionTime"></p>
