--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -17,6 +17,10 @@
     <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
     <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
     <span id="healthLabel" class="measurementLabel no-select"></span>
+    <span id="frameDropLabel" class="measurementLabel no-select">0% - Framedrop</span>
+<div class="slidecontainer">
+    <input type="range" min="0" max="100" value="0" class="slider" id="myRange">
+</div>
   
     <span id="fullscreenToggle" class="no-select">
         <img src="#" alt="" />
