--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -19,7 +19,7 @@
     <span id="healthLabel" class="measurementLabel no-select"></span>
     <span id="frameDropLabel" class="measurementLabel no-select">0% - Framedrop</span>
 <div class="slidecontainer">
-    <input type="range" min="0" max="100" value="0" class="slider" id="myRange">
+    <input type="range" min="0" max="100" value="0" class="slider" id="frameDropRange">
 </div>
   
     <span id="fullscreenToggle" class="no-select">
