--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -17,7 +17,15 @@
     <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
     <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
     <span id="healthLabel" class="measurementLabel no-select"></span>
-  
+    <span id="frameDropLabel" class="measurementLabel no-select">0% - Framedrop</span>
+    <div class="frameDropSliderContainer">
+        <input type="range" min="0" max="100" value="0" class="slider" id="frameDropRange">
+    </div>
+    <span id="delayValueLabel" class="measurementLabel no-select">0 ms - Delay</span>
+    <div class="delaySliderContainer">
+        <input type="range" min="0" max="500" value="0" class="slider" id="delayRange">
+    </div>
+ 
     <span id="fullscreenToggle" class="no-select">
         <img src="#" alt="" />
     </span>
