--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
 
-    <span id="fpsLabel" class="measurementLabel no-select">0.00 - FPS</span>
-    <span id="pingLabel" class="measurementLabel no-select">0 - Ping</span>
+    <span id="fpsLabel" class="measurementLabel no-select">FPS: 0.00</span>
+    <span id="pingLabel" class="measurementLabel no-select">Ping: 0</span>
     <span id="healthLabel" class="measurementLabel no-select"></span>
-    <span id="frameDropLabel" class="measurementLabel no-select">0% - Framedrop</span>
+    <span id="frameDropLabel" class="measurementLabel no-select">Framedrop: 0%</span>
     <div class="frameDropSliderContainer">
         <input type="range" min="0" max="100" value="0" class="slider" id="frameDropRange">
     </div>
-    <span id="delayValueLabel" class="measurementLabel no-select">0 ms - Delay</span>
+    <span id="delayValueLabel" class="measurementLabel no-select">Delay: 0 ms</span>
     <div class="delaySliderContainer">
         <input type="range" min="0" max="500" value="0" class="slider" id="delayRange">
     </div>
