--- a/GameServer/wwwroot/index.html
+++ b/GameServer/wwwroot/index.html
@@ -25,6 +25,10 @@
     <div class="delaySliderContainer">
         <input type="range" min="0" max="500" value="0" class="slider" id="delayRange">
     </div>
+    <span id="extrapolationValueLabel" class="measurementLabel no-select">Extrapolation - ON</span>
+    <div class="extrapolationSliderContainer">
+        <input type="range" min="0" max="1" value="1" class="slider" id="extrapolationRange">
+    </div>
  
     <span id="fullscreenToggle" class="no-select">
         <img src="#" alt="" />
